Fixing top nav spacing

--- a/src/components/react/LeftNavigation/LeftNavigationStyleOverride.css
+++ b/src/components/react/LeftNavigation/LeftNavigationStyleOverride.css
@@ -60,7 +60,6 @@
 
   nav.neo-navbar {
     overflow: visible;
-    margin-bottom: 3rem;
   }
 
   .left-navigation {
